# SemanticDeduplicator

./: .cookiecutter.json  .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/semantic_deduplicator/: __init__.py  __main__.py  deduplicator.py  main.py  utils.py
tests/: __init__.py  test_main.py
