[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic_deduplicator"
version = "0.0.10"
authors = [{ name="Greg Kamradt", email="contact@dataindependent.com", twitter="https://twitter.com/GregKamradt"}]
description = "A simple python package to deduplicate items based on their semantic meaning"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "openai",
    "python-dotenv"
]

[project.urls]
"Homepage" = "https://github.com/gkamradt/SemanticDeduplicator"
"Bug Tracker" = "https://github.com/gkamradt/SemanticDeduplicator/issues"