[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "semantic_deduplicator"
version = "0.0.3"
description = "A simple python package to deduplicate items based on their semantic meaning"
authors = ["Greg Kamradt <contact@dataindependent.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/gkamradt/SemanticDeduplicator"
repository = "https://github.com/gkamradt/SemanticDeduplicator"
documentation = ""
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9.13"
numpy = "^1.21.6"
openai = "^0.27.9"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"